' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.

' Preview durch <Alt>d

@startuml ER Diagramm

' hide the spot
hide circle

' evtl. Prbleme mit Kraehenfuessen vermeiden
skinparam linetype ortho

entity "Buch" {
  *id : integer <<generated>>
  --
  *version: integer
  *isbn: text
  *rating: number
  *art: text
  *preis: number
  *rabatt: number
  *lieferbar: boolean
  datum: date
  homepage: text
  schlagwoerter: text
  *erzeugt: timestamp
  *aktualisiert: timestamp
}

entity "Titel" {
  *id : integer <<generated>>
  --
  *titel : text
  untertitel: text
  *buch_id : integer <<FK>>
}

entity "Abbildung" {
  *id : integer <<generated>>
  --
  *beschriftung : text
  contentType: text
  *buch_id : integer <<FK>>
}

Buch ||..|| Titel
Buch ||..o{ Abbildung

footer (c) Jürgen Zimmermann

@enduml
